src/scss/layouts/_main.scss
/*
 * layouts/main
 */

.l-main {
  margin-top: 55px;

}

.l-site-header {
  width: 100%;
  height: 200px;
  background-color: $main-color;
  margin-bottom: 20px;
  position: relative;
  text-align: center;

  .l-site-header-inner {
    padding-top: 50px;
    padding-bottom: 50px;

    .logo {
      vertical-align: top; 
      line-height: 6.0rem; 
    }

    .site-title {
      color: white;
      text-align: center;
      font-size: 6.0rem;
      letter-spacing: 0.2rem;
      font-weight: 100;
      margin-bottom: 10px;
      display: inline-block;

      @include media-sp {
        font-size: 4.0rem;
      }
    }

    .site-description {
      color: #407f86;
    }
  }
}

.l-post-header {
  padding: 24px;

  @include media-sp {
    padding: 24px 12px;
  }

  position: relative;

  .container {
      max-width: 900px;
  }

  &:before {
    content: "";
    display: block;
    background-color: $main-color;
    height: 250px;
    width: 100%;
    position: absolute;
    top: 0;
    left:0;
    z-index: -1;
  }
}

.l-post {
  position: relative;
  max-width: 900px;
  
  @include media-sp {
    padding-top: 48px;
    padding-bottom: 24px;
    padding-left: 12px;
    padding-right: 12px;
  }
  
  @include media-tb {
    padding-top: 48px;
    padding-bottom: 24px;
    padding-left: 24px;
    padding-right: 24px;
  }

  @include media-pc {
    padding-top: 48px;
    padding-bottom: 48px;
    padding-left: 48px;
    padding-right: 48px;
  }

  margin: 8px auto;
  min-height: 200px;

  background-color: white;

  &.card:hover {
    @include shadow(2);
  }


  .l-share {
    position: absolute;
    top: -28px;
    right: 20px;
  }
}

.container {
  max-width: 900px;
  margin: 0 auto;
}

.l-list-title {
  font-size: 3.0rem;
  max-width: 900px;
  margin-bottom: 20px;
  padding-left: 10px;
  border-bottom: 3px solid $main-color;
}

